--- a/docker/rucio-daemons/Dockerfile
+++ b/docker/rucio-daemons/Dockerfile
@@ -1,5 +1,4 @@
 ARG RUCIO_VERSION
-
-FROM rucio/rucio-server:release-$RUCIO_VERSION
+FROM rucio/rucio-daemons:release-$RUCIO_VERSION
 
 RUN python3 -m pip install --no-cache-dir -i https://test.pypi.org/simple/ gluex-rucio-policy-package
